Correct 'people' section a-z alignment

--- a/app/common-components/directives/menu-directive/_menu-directive_styles.scss
+++ b/app/common-components/directives/menu-directive/_menu-directive_styles.scss
@@ -320,7 +320,7 @@ menu-directive
 
 	.people-option-list
 	{
-		left: -70px;
+		left: -98px;
 
 		.ghost-element
 		{
